--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </script>
 <hr>
 <center><h1>Uxie</h1></center>
-<p>Uxie was made by MVPShon#1664 on Discord with JavaScript using the discord.js package on NPM. Uxie is a multipurpose bot that has multiple functions like Music, NSFW, Pokemon, Fun, Anime and more to come! Any problems go to the support server below:
+<p>Uxie is a bot made by MVPShon#1664 for Discord using JavaScript. Uxie is a multipurpose bot that has multiple functions like Music, Pokemon, Fun, Anime and many more to come! If you are having any problems, or just wish to talk to the Bot Developer, please go to the support server below:
 </p>
 <div>
 	<form action="https://discord.gg/tT8aZjJ">
