--- a/commands.html
+++ b/commands.html
@@ -89,6 +89,20 @@
     <b>Copy</b> | Straight forward command. I copy whatever you tell me to. This command works better if I can delete other people's messages.
 </div>
 <div>
+    <b>Roll</b> | Roll the die.
+</div>
+<div>
+    <b>Invite</b> | Provides a link to invite Uxie to your server.
+</div>
+<div>
+    <b>User-info</b> | Provides detailed information about the user mentioned.
+</div>
+<!--- Welcome Section -->
+
+<div>
+    <center><h2>Pokédex Commands</h2></center>
+</div>	
+<div>
 <b>Dex</b> | Brings up a Pokemon's information and stats!
 </div>
 <div>
@@ -98,22 +112,12 @@
     <b>Item</b> | Explains a specific Pokemon item
 </div>
 <div>
-    <b>Invite</b> | Provides a link to invite Uxie to your server.
-</div>
-<div>
     <b>Move</b> | Provides information on a Pokemon move
-</div>
-<div>
-    <b>Roll</b> | Roll the die.
 </div>
 <div>
     <b>Type</b> | Provides type information for a Pokemon type.
 </div>
-<div>
-    <b>User-info</b> | Provides detailed information about the user mentioned.
-</div>
-<!--- Welcome Section -->
-
+<!--- What -->
 <div>
     <center><h2>Music</h2></center>
 </div>
