--- a/commands.html
+++ b/commands.html
@@ -49,7 +49,7 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="img/uxie1.jpg">
+			<img src="img/13205ff2db4dd3e124c8c78b6abfdb5c.gif">
 		</div>
 			<div class="carousel-item">
 					<img src="img/uxie3.jpg">
